--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.7",
         "prettier": "^3.7.2",
-        "prettier-plugin-tailwindcss": "^0.7.1"
+        "prettier-plugin-tailwindcss": "^0.7.1",
+        "tailwindcss": "^4.0.0",
+        "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^2.2.19",
+        "@vitejs/plugin-vue": "^6.0.2",
+        "vue": "^3.5.25",
+        "ziggy-js": "^2.6.0"
     }
 }
