--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.23",
         "@inertiajs/vue3": "^2.2.19",
         "@vitejs/plugin-vue": "^6.0.2",
+        "playwright": "^1.57.0",
         "vue": "^3.5.25",
         "ziggy-js": "^2.6.0"
     }
